test/bad/automatic/base/compile_time/0034.lat
int main() {
   return 0;
}

void printInt(int x) {

}